<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_off_white">

    <include
        android:id="@+id/header_profile"
        layout="@layout/header_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:paddingHorizontal="34dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_profile">

        <!-- Full name Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="7dp"
            android:text="@string/fragment_personal_info_edit_full_name_prompt"
            android:textColor="@color/neutral_black"
            android:textSize="16sp" />

        <!-- Full name Input -->
        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_form_field"
            android:hint="@string/fragment_profile_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="16dp"
            android:paddingVertical="17dp"
            android:textColor="@color/primary_navy"
            android:textSize="16sp" />

        <!-- Phone number Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fragment_personal_info_edit_phone_number_prompt"
            android:textColor="@color/neutral_black"
            android:textSize="16sp" />

        <!-- Phone number Input -->
        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_form_field"
            android:hint="@string/fragment_profile_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="16dp"
            android:paddingVertical="17dp"
            android:textColor="@color/primary_navy"
            android:textSize="16sp" />

        <!-- Email Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="10dp"
            android:text="@string/fragment_personal_info_edit_email_prompt"
            android:textColor="@color/neutral_black"
            android:textSize="16sp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_form_field"
            android:hint="@string/fragment_profile_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="17dp"
            android:textColor="@color/primary_navy"
            android:textSize="16sp" />

        <!-- Confirm Button -->
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            layout="@layout/button_confirm" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
