<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_header_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/profile_header_background"
    android:paddingBottom="24dp">

    <!--  "Profile" Title Text  -->
    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="61dp"
        android:text="@string/profile"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Circular background for the profile image  -->
    <View
        android:id="@+id/profile_image_background"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/image_round_white_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_title" />

    <!--  Vector Image for the profile photo  -->
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/outline_android_24"
        app:layout_constraintBottom_toBottomOf="@id/profile_image_background"
        app:layout_constraintEnd_toEndOf="@id/profile_image_background"
        app:layout_constraintStart_toStartOf="@id/profile_image_background"
        app:layout_constraintTop_toTopOf="@id/profile_image_background"
        app:tint="@color/primary_light_blue" />

    <!--  Jane Doe  -->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/name"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_image_background"
        app:layout_constraintTop_toTopOf="@id/profile_image_background" />

    <!--  doejane@loremipsum.com  -->
    <TextView
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/email"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />

    <!--  123-456-7890  -->
    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_email" />

    <!--  Orange Divider Line  -->
    <View
        android:id="@+id/profile_info_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/primary_orange"
        app:layout_constraintEnd_toEndOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="@id/profile_name"
        app:layout_constraintTop_toBottomOf="@id/profile_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>
