...
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="@color/primary_light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_event_history" />

    <android.widget.Button
        android:id="@+id/btn_event_history"
        android:layout_width="0dp"
        android:layout_height="97dp"
        android:background="@drawable/btn_event_history"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete_account" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

...
