<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox"
        android:title="@string/nav_inbox" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
